Update package meta data

--- a/Api.Mailgun/Api.Mailgun.csproj
+++ b/Api.Mailgun/Api.Mailgun.csproj
@@ -7,11 +7,15 @@
     <PackageTags>api mail email mailgun</PackageTags>
     <Description>.NET Standard 2.0 library for sending email and working with mailing lists via Mailgun API</Description>
     <PackageProjectUrl>https://github.com/Groxan/Api.Mailgun</PackageProjectUrl>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Product>PureApi.Mailgun</Product>
     <Company />
-    <Copyright />
+    <Copyright>Copyright © Maksim Strebkov 2018</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Groxan/Api.Mailgun/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/Groxan/Api.Mailgun.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
